--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -7,6 +7,7 @@
 
     <!-- Include Bootstrap CSS -->
     <link rel="stylesheet" href="/public/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/public/css/jquery.dataTables.css">
   </head>
   <body>
     <div class="container">
@@ -14,24 +15,35 @@
     </div>
 
     <!-- Include Bootstrap JS and Popper.js -->
-    <script src="/public/js/jquery-3.5.1.slim.min.js"></script>
+    {{!-- <script src="/public/js/jquery-3.5.1.slim.min.js"></script> --}}
+<script type="text/javascript" src="/public/js/jquery-3.6.0.min.js"></script>
     <script src="/public/js/popper.min.js"></script>
     <script src="/public/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="public/js/jquery.dataTables.js"></script>
 
-    <script>
-      function submitForm() {
-        const url = document.getElementById('url').value;
-        const elementId = document.getElementById('elementId').value;
-        const limit = document.getElementById('limit').value;
-        const saveFormat = document.getElementById('saveFormat').value;
-        const parentId = document.getElementById('parentId').value;
-        if (url.trim() !== '') {
-          const scraperURL = '/scrape?url='+encodeURIComponent(url)+'&parentId='+parentId+'&limit='+limit+'&elementId='+elementId+'&saveFormat='+saveFormat;
-          window.location.href = scraperURL;
-        } else {
-          alert('Please enter a valid URL.');
-        }
-      }
-    </script>
+   <script>
+    function submitForm() {
+      const url = document.getElementById('url').value;
+      const elementId = document.getElementById('elementId').value;
+      const limit = document.getElementById('limit').value;
+      const pages = document.getElementById('pages').value;
+      const saveFormat = document.getElementById('saveFormat').value;
+
+      // Display loading message
+      document.getElementById('messages').innerHTML = 'Scraping in progress...';
+
+      // Make an AJAX request to start scraping
+      fetch(`/scrape?url=${encodeURIComponent(url)}&limit=${limit}&elementId=${elementId}&saveFormat=${saveFormat}&pages=${pages}`)
+        .then(response => response.json())
+        .then(data => {
+          // Display success message
+          document.getElementById('messages').innerHTML = 'Scraping completed successfully!';
+        })
+        .catch(error => {
+          // Display error message
+          document.getElementById('messages').innerHTML = `Error during scraping: ${error.message}`;
+        });
+    }
+  </script>
   </body>
   </html>
