--- a/views/businesses.hbs
+++ b/views/businesses.hbs
@@ -1,5 +1,5 @@
 <div style="margin-top: 50px; position:relative;">
-<h3 class="m-5">Businesses scraped from : {{url}}</h3>
+<h3 class="m-5">Businesses scraped from : {{businesses}}</h3>
 
 </div>
   <div class="container mt-4" style="margin-bottom: 200px;">
@@ -12,9 +12,9 @@
       <tbody id="tableBodyBusiness">
         {{#each businesses}}
           <tr>
-            <td>{{this.name}}</td>
-            <td>{{this.address}}</td>
-            <td>{{this.description}}</td>
+            <td>{{name}}</td>
+            <td>{{address}}</td>
+            <td>{{description}}</td>
           </tr>
         {{/each}}
       </tbody>
