--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,29 +1,29 @@
 <div class="container mt-4">
       <h2>Web Scraper Input</h2>
-      <form id="scraperForm">
+      <form id="scraperForm" method="post" enctype="application/x-www-form-urlencoded">
         <div class="form-group">
           <label for="url">Website URL:</label>
-          <input type="text" class="form-control" id="url" name="url" required>
+          <input type="text" class="form-control" value="https://www.tanzapages.com/location/Dar_Es_Salaam/" id="url" name="url" required>
         </div>
         <div class="form-group">
           <label for="pages">Pages Limit to paginate </label>
-          <input type="text" class="form-control" id="pages" name="pages" required>
+          <input type="text" class="form-control" value="2" id="pages" name="pages" required>
         </div>
         <div class="form-group">
           <label for="limit">item Limit per page </label>
-          <input type="text" class="form-control" id="limit" name="limit" required>
+          <input type="text" class="form-control" value="20" id="limit" name="limit" required>
         </div>
         <div class="form-group">
           <label for="parentId">Parent ID (start with #) or Class (start with .)</label>
-          <input type="text" class="form-control" id="parentId" name="parentId" required>
+          <input type="text" class="form-control" value="#listings" id="parentId" name="parentId" required>
         </div>
         <div class="form-group">
           <label for="elementId">Element ID (#)</label>
-          <input type="text" class="form-control" id="elementId" name="elementId" required>
+          <input type="text" class="form-control" value="#cmap_" id="elementId" name="elementId" required>
         </div>
         <div class="form-group">
           <label for="saveFormat">Save format (csv/json)</label>
-          <input type="text" class="form-control" id="saveFormat" name="saveFormat" required>
+          <input type="text" class="form-control" value="json" id="saveFormat" name="saveFormat" required>
         </div>
         <button type="button" class="btn btn-primary" onclick="submitForm()">Scrape Data</button>
       </form>
